[gd_scene load_steps=2 format=3 uid="uid://cwcwpsfnkjrrl"]

[ext_resource type="Script" path="res://downloader.gd" id="1_2m7ti"]

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2m7ti")

[node name="VideoURL" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 22.0
offset_right = 600.0
offset_bottom = 53.0
placeholder_text = "Video URL"
expand_to_text_length = true

[node name="DownloadPath" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 60.0
offset_right = 600.0
offset_bottom = 91.0
placeholder_text = "Download Path"
expand_to_text_length = true

[node name="FileFormat" type="OptionButton" parent="."]
layout_mode = 2
offset_left = 120.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 131.0
item_count = 4
selected = 0
popup/item_0/text = "mp4"
popup/item_0/id = 0
popup/item_1/text = "webm"
popup/item_1/id = 3
popup/item_2/text = "mp3"
popup/item_2/id = 1
popup/item_3/text = "wav"
popup/item_3/id = 2

[node name="Download" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 100.0
offset_right = 114.0
offset_bottom = 131.0
text = "Download"

[node name="ResetPath" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 60.0
offset_right = 114.0
offset_bottom = 91.0
text = "Reset Path"

[node name="Status" type="Label" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 100.0
offset_right = 600.0
offset_bottom = 130.0
text = "Downloading..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="DownloadPath" to="." method="_on_download_path_text_changed"]
[connection signal="pressed" from="Download" to="." method="_on_download_pressed"]
[connection signal="pressed" from="ResetPath" to="." method="_on_reset_path_pressed"]
